# aoe2-lan-parties

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  analysis_data.json  analyze_games.py  build_windows_zip.sh  debug_summary_output.txt  display_game_results.py  game_registry.json  main.py  parse.py  parse_single_game.py  player_ratings.json  pyproject.toml  rating_history.json  requirements-web.txt  requirements.txt  run_web.py  start.bat
.github/workflows/: build-windows-uploader.yml
analyzer_lib/: __init__.py  analyze_games.py  config.py  db.py  registry_builder.py  registry_stats.py  replay_parser.py  report_generator.py
client/: build.bat  uploader.py
scripts/: bulk_upload.sh  calculate_trueskill.py  debug_summary_output.py  display_game_results.py  handicap_recommender.py  migrate_to_sqlite.py  parse_single_game.py  team_balancer.py
server/: __init__.py  migrate.py  processing.py  storage.py
tasks/: prd-migration-deployment.md  prd-on-demand-awards-by-lan-event.md  prd-server-api-cache.md  prd-server-processing-pipeline.md  prd-windows-uploader-client.md
web/: app.py  services.py
web/static/: app.js  style.css
web/static/css/: admin.css  base.css  chart-awards.css  history.css  modal-uploader.css  teams.css
web/static/js/: admin.js  awards.js  chart.js  core.js  history.js  player-modal.js  teams.js
web/templates/: index.html
