[tool.poetry]
name = "aoe2-lan-party-analyzer"
version = "0.1.0"
description = "Analyzes Age of Empires II recorded game files from LAN parties to generate statistics and awards."
authors = ["EMMANUEL marboeuf <marboeuf.e@gmail.com>"]
readme = "README.md"
packages = [{include = "analyzer_lib"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"  # Compatible with Python 3.9 up to 3.12
mgz = "^1.8.31"      # Using a recent version of mgz
trueskill = "^0.4.5" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0" # Optional: for testing
black = "^23.7.0"  # Optional: for code formatting
flake8 = "^6.0.0" # Optional: for linting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
